--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "CS744-Course-Project"]
-	path = CS744-Course-Project
+	path = Course Project
 	url = https://github.com/ShawnZhong/CS744-Course-Project.git
